tests/toy/neg/001661_mutation.toylang
program a = { while a program a = { } . do sleep; } .
